<resources>
    <string name="app_name">Resturant Search</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="view_more">View More</string>
    <string name="submit">Continue</string>
    <string name="cuisine_select_text">Please select atleast 4 Cuisines</string>
    <string name="no_restaurant_found">No Restaurant Found</string>
    <string name="cost_asc">Cost - Asc</string>
    <string name="cost_desc">Cost - Desc</string>
    <string name="rating_asc">Rating - Asc</string>
    <string name="rating_desc">Rating - Desc</string>
    <string name="distance_asc">Distance - Asc</string>
    <string name="distance_desc">Distance - Desc</string>
    <string name="sort_by">Sort By</string>
    <string name="costForTwo">%1$s for two</string>
</resources>
